# itsm_ticket_triage

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
scripts/: check_local.sh  oracle_baseline.py  push_hf_space.sh
server/: __init__.py  app.py
support_triage_env/: __init__.py  client.py  graders.py  models.py  tasks.py
support_triage_env/server/: app.py  support_environment.py
tests/: test_env_step.py  test_graders.py  test_inference_stdout_format.py
